--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ title: Hack on GitHub Pages
 description: >
   This site will get you started hacking with GitHub Pages.
 baseurl: "/tamuhack" # the subpath of your site
-url: "https://steveortiz.github.io"
-email: steve@ortizaggies.com
-github_username:  steveortiz
-linkedin_username: trustycoder
-twitter_username: trustycoder
+url: "https://jayrp.github.io"
+email: contactjalaj@gmail.com.com
+github_username:  JayRP
+linkedin_username: jalaj18
+twitter_username: Jay_RP
 
 # Build settings
 markdown: kramdown
