--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ baseurl: "/tamuhack" # the subpath of your site
 url: "https://jayrp.github.io"
 email: contactjalaj@gmail.com.com
 github_username:  JayRP
-linkedin_username: jalaj18
+linkedin_username: jalaj-ranjan-pandey
 twitter_username: Jay_RP
 
 # Build settings
